SERVER-10507 Resize vector after reading config file to match the number of bytes actually read